# vmod-reqwest

./: .pre-commit-config.yaml  API.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  tests.yaml
docker/: Dockerfile
src/: implementation.rs  lib.rs
tests/: test11.vtc  test13.vtc  test14.vtc  test15.vtc
