[package]
name = "vmod_reqwest"
version = "0.0.15"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard guillaume.quintard@gmail.com"]

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
hyper = "0.14.16"
reqwest = { version = "0.11", features = ["stream", "deflate", "gzip", "brotli", "native-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
varnish = { version = "0.5.0", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
