[package]
name = "vmod_reqwest"
version = "0.0.15"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard <guillaume.quintard@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
reqwest = { version = "0.12.23", features = ["stream", "deflate", "gzip", "brotli", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
varnish = { version = "0.5.0", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
